--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "packageManager": "pnpm@7.0.0",
   "scripts": {
     "build": "vite-ssg build",
-    "dev": "vite --port 3333 --open",
+    "dev": "vite --port 3333",
     "lint": "eslint .",
     "preview": "vite preview",
     "preview-https": "serve dist",
     "test": "vitest",
     "test:e2e": "cypress open",
     "test:unit": "vitest",
-    "typecheck": "vue-tsc --noEmit"
+    "typecheck": "vue-tsc --noEmit",
+    "story:dev": "histoire dev",
+    "story:build": "histoire build",
+    "story:preview": "histoire preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "1.0.0-beta.1",
     "@vueuse/core": "^8.3.1",
     "@vueuse/head": "^0.7.6",
     "nprogress": "^0.2.0",
@@ -29,28 +33,35 @@
     "@intlify/vite-plugin-vue-i18n": "^4.0.0",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
+    "@unocss/transformer-directives": "^0.35.4",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/test-utils": "^2.0.0-rc.21",
+    "autoprefixer": "^10.4.7",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
     "cypress": "^9.6.0",
     "eslint": "^8.14.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "histoire": "^0.7.6",
     "https-localhost": "^4.7.1",
     "markdown-it-link-attributes": "^4.0.0",
     "markdown-it-prism": "^2.2.4",
     "pnpm": "^7.0.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4",
     "unocss": "^0.32.9",
     "unplugin-auto-import": "^0.7.1",
     "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.7",
+    "vite-auto-import-resolvers": "^3.0.1",
     "vite-plugin-inspect": "^0.5.0",
     "vite-plugin-md": "^0.13.0",
     "vite-plugin-pages": "^0.23.0",
     "vite-plugin-pwa": "^0.12.0",
     "vite-plugin-vue-inspector": "0.5.7",
     "vite-plugin-vue-layouts": "^0.6.0",
+    "vite-plugin-vue-type-imports": "^0.2.0",
     "vite-ssg": "^0.19.2",
     "vite-ssg-sitemap": "^0.2.6",
     "vitest": "^0.10.1",
