--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,6 @@
       "~/*": ["src/*"]
     }
   },
-  "exclude": ["dist", "node_modules", "cypress"]
+  "exclude": ["dist", "node_modules", "cypress"],
+  // "include": [ "env.d.ts",],
 }
