--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "packageManager": "pnpm@7.0.0",
   "scripts": {
     "build": "vite-ssg build",
-    "dev": "vite --port 3333",
+    "dev": "vite --port 3333 --host",
     "lint": "eslint .",
     "preview": "vite preview",
     "preview-https": "serve dist",
