--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "vueye",
   "private": true,
   "packageManager": "pnpm@7.0.0",
   "scripts": {
@@ -24,6 +25,7 @@
     "prism-theme-vars": "^0.2.2",
     "vue": "^3.2.33",
     "vue-demi": "^0.12.5",
+    "vue-eslint-parser": "^8.0.0",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.14"
   },
@@ -48,6 +50,7 @@
     "markdown-it-prism": "^2.2.4",
     "pnpm": "^7.0.0",
     "postcss": "^8.4.14",
+    "prettier": "2.7.1",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4",
     "unocss": "^0.32.9",
