--- a/package.json
+++ b/package.json
@@ -17,57 +17,57 @@
     "story:preview": "histoire preview"
   },
   "dependencies": {
-    "@formkit/auto-animate": "1.0.0-beta.1",
-    "@vueuse/core": "^8.3.1",
-    "@vueuse/head": "^0.7.6",
+    "@formkit/auto-animate": "1.0.0-beta.5",
+    "@vueuse/core": "^9.9.0",
+    "@vueuse/head": "^1.0.22",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.13",
-    "prism-theme-vars": "^0.2.2",
-    "vue": "^3.2.33",
-    "vue-demi": "^0.12.5",
-    "vue-eslint-parser": "^8.0.0",
-    "vue-i18n": "^9.1.10",
-    "vue-router": "^4.0.14"
+    "pinia": "^2.0.28",
+    "prism-theme-vars": "^0.2.4",
+    "vue": "^3.2.45",
+    "vue-demi": "^0.13.11",
+    "vue-eslint-parser": "^9.1.0",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.22.0",
-    "@iconify-json/carbon": "^1.1.4",
-    "@intlify/vite-plugin-vue-i18n": "^4.0.0",
+    "@antfu/eslint-config": "^0.34.0",
+    "@iconify-json/carbon": "^1.1.11",
+    "@intlify/unplugin-vue-i18n": "^0.8.1",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
-    "@unocss/transformer-directives": "^0.35.4",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vue/test-utils": "^2.0.0-rc.21",
-    "autoprefixer": "^10.4.7",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/test-utils": "^2.2.6",
+    "autoprefixer": "^10.4.13",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
-    "cypress": "^9.6.0",
-    "eslint": "^8.14.0",
+    "cypress": "^12.2.0",
+    "eslint": "^8.30.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "histoire": "^0.7.6",
+    "eslint-plugin-vue": "^9.8.0",
+    "histoire": "^0.12.4",
     "https-localhost": "^4.7.1",
-    "markdown-it-link-attributes": "^4.0.0",
-    "markdown-it-prism": "^2.2.4",
-    "pnpm": "^7.0.0",
-    "postcss": "^8.4.14",
-    "prettier": "2.7.1",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.4",
-    "unocss": "^0.32.9",
-    "unplugin-auto-import": "^0.7.1",
-    "unplugin-vue-components": "^0.19.3",
-    "vite": "^2.9.7",
-    "vite-auto-import-resolvers": "^3.0.1",
-    "vite-plugin-inspect": "^0.5.0",
-    "vite-plugin-md": "^0.13.0",
-    "vite-plugin-pages": "^0.23.0",
-    "vite-plugin-pwa": "^0.12.0",
-    "vite-plugin-vue-inspector": "0.5.7",
-    "vite-plugin-vue-layouts": "^0.6.0",
-    "vite-plugin-vue-type-imports": "^0.2.0",
-    "vite-ssg": "^0.19.2",
-    "vite-ssg-sitemap": "^0.2.6",
-    "vitest": "^0.10.1",
-    "vue-tsc": "^0.34.11"
+    "markdown-it-link-attributes": "^4.0.1",
+    "markdown-it-prism": "^2.3.0",
+    "pnpm": "^7.21.0",
+    "postcss": "^8.4.20",
+    "prettier": "2.8.1",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4",
+    "unocss": "^0.48.0",
+    "unplugin-auto-import": "^0.12.1",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^4.0.3",
+    "vite-auto-import-resolvers": "^3.0.3",
+    "vite-plugin-inspect": "^0.7.11",
+    "vite-plugin-md": "^0.21.5",
+    "vite-plugin-pages": "^0.28.0",
+    "vite-plugin-pwa": "^0.14.0",
+    "vite-plugin-vue-inspector": "^2.0.4",
+    "vite-plugin-vue-layouts": "^0.7.0",
+    "vite-plugin-vue-type-imports": "^0.2.4",
+    "vite-ssg": "^0.22.1",
+    "vite-ssg-sitemap": "^0.4.3",
+    "vitest": "^0.26.2",
+    "vue-tsc": "^1.0.18"
   }
 }
