--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@7.0.0",
   "type": "module",
   "scripts": {
-    "build": "vite-ssg build",
+    "build": "vite build",
     "dev": "vite --port 3333 --host",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -18,57 +18,54 @@
     "story:preview": "histoire preview"
   },
   "dependencies": {
-    "@formkit/auto-animate": "1.0.0-beta.5",
-    "@vueuse/core": "^9.9.0",
-    "@vueuse/head": "^1.0.22",
+    "@vueuse/core": "^10.3.0",
+    "@vueuse/head": "^1.1.26",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.28",
+    "pinia": "^2.1.6",
     "prism-theme-vars": "^0.2.4",
-    "vue": "^3.2.45",
-    "vue-demi": "^0.13.11",
-    "vue-eslint-parser": "^9.1.0",
+    "vue": "^3.3.4",
+    "vue-demi": "^0.14.5",
+    "vue-eslint-parser": "^9.3.1",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.34.0",
-    "@iconify-json/carbon": "^1.1.11",
-    "@intlify/unplugin-vue-i18n": "^0.8.1",
+    "@antfu/eslint-config": "^0.39.8",
+    "@iconify-json/carbon": "^1.1.18",
+    "@intlify/unplugin-vue-i18n": "^0.12.2",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/test-utils": "^2.2.6",
-    "autoprefixer": "^10.4.13",
-    "critters": "^0.0.16",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/test-utils": "^2.4.1",
+    "autoprefixer": "^10.4.14",
+    "critters": "^0.0.19",
     "cross-env": "^7.0.3",
-    "cypress": "^12.2.0",
-    "eslint": "^8.30.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.8.0",
-    "histoire": "^0.12.4",
+    "cypress": "^12.17.2",
+    "eslint": "^8.46.0",
+    "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-vue": "^9.16.0",
+    "histoire": "^0.16.2",
     "https-localhost": "^4.7.1",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-prism": "^2.3.0",
-    "pnpm": "^7.21.0",
-    "postcss": "^8.4.20",
-    "prettier": "2.8.1",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
-    "unocss": "^0.48.0",
-    "unplugin-auto-import": "^0.12.1",
-    "unplugin-vue-components": "^0.22.12",
-    "vite": "^4.0.3",
-    "vite-auto-import-resolvers": "^3.0.3",
-    "vite-plugin-inspect": "^0.7.11",
+    "pnpm": "^8.6.10",
+    "postcss": "^8.4.27",
+    "prettier": "3.0.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
+    "unocss": "^0.54.0",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.1",
+    "vite": "^4.4.7",
+    "vite-auto-import-resolvers": "^3.1.0",
+    "vite-plugin-inspect": "^0.7.33",
     "vite-plugin-md": "^0.21.5",
-    "vite-plugin-pages": "^0.28.0",
-    "vite-plugin-pwa": "^0.14.0",
-    "vite-plugin-vue-inspector": "^2.0.4",
-    "vite-plugin-vue-layouts": "^0.7.0",
-    "vite-plugin-vue-type-imports": "^0.2.4",
-    "vite-ssg": "^0.22.1",
-    "vite-ssg-sitemap": "^0.4.3",
-    "vitest": "^0.26.2",
-    "vue-tsc": "^1.0.18"
+    "vite-plugin-pages": "^0.31.0",
+    "vite-plugin-pwa": "^0.16.4",
+    "vite-plugin-vue-inspector": "^3.5.0",
+    "vite-plugin-vue-layouts": "^0.8.0",
+    "vite-plugin-vue-type-imports": "^0.2.5",
+    "vitest": "^0.33.0",
+    "vue-tsc": "^1.8.8"
   }
 }
